--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     >
-  <RelativeLayout
+  <android.support.v7.widget.RecyclerView
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:background="@color/white"
-      android:paddingBottom="@dimen/activity_vertical_margin"
-      android:paddingLeft="@dimen/activity_horizontal_margin"
-      android:paddingRight="@dimen/activity_horizontal_margin"
-      android:paddingTop="@dimen/activity_vertical_margin"
-      tools:context="com.knolskape.app.apod.MainActivity"
-      >
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="25dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        />
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"
-        />
-
-    <TextView
-        android:id="@+id/desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        tools:text="Hello World!"
-        />
-
-  </RelativeLayout>
-</ScrollView>
+      android:layout_height="wrap_content"
+      android:id="@+id/rv_images"/>
+</RelativeLayout>
 
